2007-09-20  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  Fix memory leak with non reference counting reference types in
	  property getters, now we enforce an explicit ownership transfer in
	  such a case,  fixes bug 472904

2007-09-20  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/vala.h, vala/valacodecontext.vala,
	  vala/valacodegenerator.vala, gobject/Makefile.am,
	  gobject/valaccodebinding.vala, gobject/valaccodegenerator.vala,
	  gobject/valadbusbindingprovider.vala: create code nodes with factory
	  methods to support backend-specific code bindings

2007-09-20  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/parser.y: Add support for ownership transfer with properties
	  using the HASH (#) modifier. e.g. public string!# foo { get; set; }

2007-09-20  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/glib-2.0.vala: add G.HashTable.size ()

2007-09-20  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala, gobject/valaccodegenerator.vala: support
	  notify attribute for properties

2007-09-19  Alberto Ruiz <aruiz@gnome.org>

	* vala-1.0.pc.in: add vapigen variable,
	  fixes bug 477111

2007-09-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix public static fields,
	  fixes bug 477207

2007-09-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratormethod.vala: support mapping interface
	  methods to abstract and virtual methods, fixes bug 477206

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valacodebinding.vala,
	  vala/valacodecontext.vala, vala/valacodegenerator.vala,
	  vala/valacodenode.vala, gobject/Makefile.am,
	  gobject/valaccodegenerator.vala, compiler/valacompiler.vala: rename
	  CodeGenerator to CCodeGenerator, add abstract CodeGenerator and
	  CodeBinding classes

2007-09-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacodevisitor.vala, vala/valalambdaexpression.vala,